# fraud-risk-engine-portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: case_study.md  mvp_scope.md  openml_creditcard_results_2026-07-02.md  openml_creditcard_results_2026-07-12.md  public_data_plan.md  results_2026-07-02.md  reuse_and_license.md
scripts/: benchmark_openml_creditcard.py  benchmark_public_sample.py  create_dataset.py  demo_workflow.py  fetch_openml_creditcard.py  fetch_public_sample.py  render_openml_analysis.py  run_eval.py  score_batch.py  train_model.py  write_shap_report.py
src/fraudrisk_engine/: __init__.py  api.py  batch.py  data.py  explain.py  monitoring.py  openml_creditcard.py  public_benchmark.py  schemas.py  shap_report.py  storage.py  training.py
tests/: test_api.py  test_data.py  test_monitoring.py  test_openml_creditcard.py  test_operational_workflow.py  test_public_benchmark.py  test_shap_report.py  test_training.py
