[project]
name = "fraudrisk-engine"
version = "1.1.0"
description = "Fraud, risk, and anomaly scoring backend with operational thresholding and explainable reason codes."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Iago Aragao" }
]
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.8",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
boosting = [
  "xgboost>=2.1",
]
dev = [
  "httpx2>=0.28",
  "pytest>=8.0",
  "ruff>=0.6",
]
explain = [
  "shap>=0.48,<0.50",
]
public-data = [
  "requests>=2.32",
]
analysis = [
  "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraudrisk_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "data",
  "models",
  "reports",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
